# t7oolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml  release.yml  tauri-ci.yml
app/python/: .gitignore  pyproject.toml  requirements.txt
app/python/scripts/: build.ps1  build.py  build.sh
app/python/src/t7oolkit/: __init__.py  __main__.py  app.py  config.py
app/python/src/t7oolkit/registry/: __init__.py  tool_registry.py
app/python/src/t7oolkit/tools/: __init__.py  base.py  demo_text_tool.py  img_rect640_tool.py  register.py
app/python/src/t7oolkit/ui/: main_window.py  theme.py
app/python/src/t7oolkit/ui/components/: __init__.py  footer.py  header.py  settings_panel.py  sidebar.py  tool_workspace.py  tools_grid.py
app/python/src/t7oolkit/utils/: __init__.py  image_resize.py
app/tauri/: README.md  index.html  package-lock.json  package.json
app/tauri/scripts/: package-portable.ps1
app/tauri/src/: App.css  App.tsx
app/tauri/src-tauri/: Cargo.toml  tauri.conf.json
app/tauri/src-tauri/src/: config.rs  image_resize.rs  lib.rs  main.rs
app/tauri/src-tauri/src/tools/: img_rect640.rs  mod.rs
app/tauri/src/api/: config.ts
app/tauri/src/components/: HeaderBar.css  HeaderBar.tsx  SettingsPanel.css  SettingsPanel.tsx  SidebarNav.css  SidebarNav.tsx  StatusFooter.css  StatusFooter.tsx  ToolWorkspace.css  ToolWorkspace.tsx  ToolsGrid.css  ToolsGrid.tsx
app/tauri/src/registry/: tools.ts
scripts/: build.ps1  build.py  build.sh
src/t7oolkit/: app.py
src/t7oolkit/ui/: main_window.py
(+6 files in other folders)
