[project]
name = "t7oolkit"
version = "0.1.0"
description = "A Tkinter-based desktop toolkit application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
t7oolkit = "t7oolkit.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
