[package]
name = "t7oolkit"
version = "0.1.0"
description = "t7oolkit desktop toolbox"
authors = ["crf"]
edition = "2021"

[lib]
name = "t7oolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rayon = "1.10"
dirs = "6"
